--- a/tienda/templates/index.html
+++ b/tienda/templates/index.html
@@ -78,7 +78,7 @@
     </main>
 
     <footer>
-      <a href="#"><i class="bi bi-facebook"></i></a>
+      <a href="https://www.facebook.com/HuelladeFePapeleria/" target="_blank" rel="noopener noreferrer"><i class="bi bi-facebook"></i></a>
       <a href="#"><i class="bi bi-twitter"></i></a>
       <a href="#"><i class="bi bi-instagram"></i></a>
       <a href="https://wa.me/1234567890" target="_blank"><i class="bi bi-whatsapp"></i></a>
