--- a/tienda/templates/index.html
+++ b/tienda/templates/index.html
@@ -78,10 +78,11 @@
     </main>
 
     <footer>
+      <a id="contacto"></a>
       <a href="https://www.facebook.com/HuelladeFePapeleria/" target="_blank" rel="noopener noreferrer"><i class="bi bi-facebook"></i></a>
-      <a href="#"><i class="bi bi-twitter"></i></a>
-      <a href="#"><i class="bi bi-instagram"></i></a>
-      <a href="https://wa.me/1234567890" target="_blank"><i class="bi bi-whatsapp"></i></a>
+      {% comment %} <a href="#"><i class="bi bi-twitter"></i></a> {% endcomment %}
+      <a href="https://www.instagram.com/huellade.fe/" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
+      <a href="https://wa.me/5585866287" target="_blank" rel="noopener noreferrer"><i class="bi bi-whatsapp"></i></a>
       <p class="mt-3 mb-0">&copy; 2025 Huella de fe | Todos los derechos reservados.</p>
     </footer>
     {% load django_browser_reload %}
